<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.tic_tac_toe.startMenu.StartMenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RadioGroup
            android:id="@+id/numPlayersRadioGroup"
            android:layout_width="wrap_content"
            android:background="@drawable/border_rounded_blue"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/onePlayerGameRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/one_player"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:buttonTint="@color/purple_500" />

            <RadioGroup
                android:id="@+id/soloGameTypeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/crossesRadioButton"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/crosses"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:buttonTint="@color/purple_500" />

                <!--                    android:enabled="@{viewModel.soloGameChecked}"-->
                <RadioButton
                    android:id="@+id/noughtsRadioButton"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/noughts"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:buttonTint="@color/purple_500" />

            </RadioGroup>

            <RadioButton
                android:id="@+id/twoPlayerGameRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:enabled="true"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/two_players"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:buttonTint="@color/purple_500" />

        </RadioGroup>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numPlayersRadioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>